--- a/hackathonCalculator/Base.lproj/Main.storyboard
+++ b/hackathonCalculator/Base.lproj/Main.storyboard
@@ -74,6 +74,9 @@
                                                                 <state key="normal" title="%">
                                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="operatorButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="noy-Y0-iEg"/>
+                                                                </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMJ-vV-ror">
                                                                 <rect key="frame" x="311.5" y="0.0" width="102.5" height="102"/>
